@startuml services-overview.puml
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle

package "user" {
    class UserController
    class UserService
    interface UserRepository
}

package "seller" {
    class SellerController
    class SellerService
    interface SellerRepository
}

package "category" {
    class CategoryController
    class CategoryService
    interface CategoryRepository
}

package "product" {
    class ProductController
    class ProductService
    interface ProductRepository
}

package "cart" {
    class CartController
    class CartService
    interface CartRepository
}

package "order" {
    class OrderController
    class OrderService
    interface OrderRepository
    interface SubOrderRepository
}

package "review" {
    class ReviewController
    class ReviewService
    interface ReviewRepository
}

package "infra.security" {
    class JwtService
}

UserController --> UserService
UserService --> UserRepository
UserService --> JwtService

SellerController --> SellerService
SellerService --> SellerRepository
SellerService --> UserRepository

CategoryController --> CategoryService
CategoryService --> CategoryRepository

ProductController --> ProductService
ProductService --> ProductRepository
ProductService --> SellerRepository
ProductService --> CategoryRepository

CartController --> CartService
CartService --> CartRepository
CartService --> ProductRepository

OrderController --> OrderService
OrderService --> OrderRepository
OrderService --> SubOrderRepository
OrderService --> CartRepository
OrderService --> ProductRepository

ReviewController --> ReviewService
ReviewService --> ReviewRepository
ReviewService --> SubOrderRepository

@enduml